[workspace]
members = [".", "crates/*", "fuzz"]
default-members = ["."]
resolver = "2"

[workspace.package]
version = "0.1.0"
rust-version = "1.85.0"
edition = "2024"
authors = ["Philip Fan"]
license = "MIT"
homepage = "https://github.com/simplx-lang/mdbook-grammar"
repository = "https://github.com/simplx-lang/mdbook-grammar"
readme = "README.md"

[workspace.dependencies]
mdbook-grammar-syntax = { path = "crates/mdbook-grammar-syntax", version = "0.1.0" }
mdbook-grammar-runner = { path = "crates/mdbook-grammar-runner", version = "0.1.0" }
ecow = "0.2.5"
html-escape = "0.2.13"
mdbook = "0.4.49"
serde_json = "1.0.140"
unscanny = "0.1.0"
assert_matches = "1.5.0"


[package]
name = "mdbook-grammar"
description = "A preprocessor for mdbook that adds grammar code block support"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[dependencies]
mdbook-grammar-runner = { workspace = true }
mdbook = { workspace = true }
serde_json = { workspace = true }
