[package]
name = "grammar-runner"
description = "A runner for grammar code"
version = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[dependencies]
grammar-syntax = { workspace = true }
mdbook = { workspace = true }
unscanny = { workspace = true }
ecow = { workspace = true }
html-escape = { workspace = true }
